--- a/Round1/django/costory/posts/templates/posts/post_list.html
+++ b/Round1/django/costory/posts/templates/posts/post_list.html
@@ -1,19 +1,27 @@
 {% extends "./base.html" %}
+{% load static %}
 
-{% block post_container %}
-  <h1>글 목록 페이지입니다.</h1>
-  <table>
-    <tr>
-      <td>글 제목</td>
-      <td>글 작성일</td>
-      <td>글 수정일</td>
-    </tr>
-    {% for post in posts %}
-      <tr>
-        <td><a href={% url "post-detail" post.id %}>{{post.title}}</a></td>
-        <td>{{post.dt_created}}</td>
-        <td>{{post.dt_modified}}</td>
-      </tr>
-    {% endfor %}
-  </table>
-{% endblock post_container %}
+{% block css %}
+    <link rel="stylesheet" href={% static "posts/css/post_list.css" %}>
+{% endblock css %}
+
+{% block logo_text %}
+    <div id="header">
+        <div class="container">
+            <h1><img src="{% static 'posts/images/headertxt.png' %}"></h1>
+        </div>
+    </div>
+{% endblock logo_text %}
+
+
+{% block content %}
+    <div class="post_container">
+        {% for post in posts %}
+            <div class="post"><a href="{% url 'post-detail' post.id %}">         
+                <h2 class="title">{{post.title}}</h2>
+                <p class="date">{{post.dt_created}}</p>
+                <p class="text">{{post.content|slice:":100"}}</p>
+            </a></div>
+        {% endfor %}
+    </div>
+{% endblock content %}
