--- a/Round1/django/costory/posts/templates/posts/post_detail.html
+++ b/Round1/django/costory/posts/templates/posts/post_detail.html
@@ -22,7 +22,10 @@
         <p class="text">{{post.content|linebreaksbr}}</p>
         <p class="date_md">수정일 <span>{{post.dt_modified}}</span></p>
     </div>
-        <div class="btn">
+    <div class="btn">
         <div class="btn_list"><a href="{% url "post-list" %}">목록으로</a></div>
+        <div class="right-btn">
+            <div class="btn_modify"><a href={% url "post-update" post.id %}>수정하기</a></div>
+        </div>
     </div>
 {% endblock content %}
