--- a/Round1/B. Django CRUD/mindnote/diary/templates/diary/page_list.html
+++ b/Round1/B. Django CRUD/mindnote/diary/templates/diary/page_list.html
@@ -9,7 +9,8 @@
                 <li>
                     <a href="{% url 'page-detail' obj.id %}">
                         <div class="date">
-                            <span>{{obj.dt_created}}</span>
+                            <span>{{obj.dt_created|date:"d"}}</span>
+                            <p>{{obj.dt_created|date:"M"}}</p>
                         </div>
                         <h2>{{obj.title}}</h2>
                         <div class="score">
