--- a/Round1/B. Django CRUD/costory(training)/posts/templates/posts/post_list.html
+++ b/Round1/B. Django CRUD/costory(training)/posts/templates/posts/post_list.html
@@ -15,10 +15,13 @@
 
 
 {% block content %}
+    <div class="btn_post">
+        <a href="{% url 'post-create' %}">글쓰기</a>
+    </div>
     <div class="post_container">
         {% for post in posts %}
             <div class="post"><a href="{% url 'post-detail' post.id %}">         
-                <h2 class="title">{{psts.title}}</h2>
+                <h2 class="title">{{post.title}}</h2>
                 <p class="date">{{post.dt_created}}</p>
                 <p class="text">{{post.content|slice:":100"}}</p>
             </a></div>
