--- a/Round1/B. Django CRUD/mindnote/diary/templates/diary/page_list.html
+++ b/Round1/B. Django CRUD/mindnote/diary/templates/diary/page_list.html
@@ -1,12 +1,12 @@
 {% extends './base.html' %}
 
 {% block content %}
-{% if page.object_list %}
+{% if page_obj.object_list %}
     <div class="wrap-note">
         <div class="note">         
             <div class="note-list">
                 <ul>
-                    {% for obj in page.object_list %}
+                    {% for obj in page_obj.object_list %}
                     <li>
                         <a href="{% url 'page-detail' obj.id %}">
                             <div class="date">
@@ -24,7 +24,7 @@
                 </ul>
             </div>
             <div class="paging">
-                {% if page.has_previous %}
+                {% if page_obj.has_previous %}
                     <a href="?page=1" class="first">처음</a>
                     <a href="?page={{page.previous_page_number}}" class="prev">이전</a>
                 {% endif %}
@@ -33,7 +33,7 @@
                     <p>{{page.number}} of {{page.paginator.num_pages}}</p>
                 </span>
             
-                {% if page.has_next %}
+                {% if page_obj.has_next %}
                     <a href="?page={{page.next_page_number}}" class="next">다음</a>
                     <a href="?page={{page.paginator.num_pages}}" class="last">마지막</a>
                 {% endif %}
