--- a/byunhm02/Round2/Django유저기능구현하기/django-coplate/coplate_project/coplate/templates/coplate/index.html
+++ b/byunhm02/Round2/Django유저기능구현하기/django-coplate/coplate_project/coplate/templates/coplate/index.html
@@ -33,6 +33,7 @@
                   </span>
                 </div>
                 <div class="review-author">
+                  <div class="cp-avator" style="background-image:url('{{review.author.profile_pic.url}}')"></div>
                   <span>{{review.author.nickname}}</span>
                 </div>
               </div>
