--- a/kckc0608/Round2/django-coplate/coplate_project/coplate/templates/coplate/index.html
+++ b/kckc0608/Round2/django-coplate/coplate_project/coplate/templates/coplate/index.html
@@ -14,47 +14,33 @@
       <h2>리뷰 목록</h2>
       <a class="cp-ic-button circle newreview" href="#">리뷰 작성</a>
     </div>
-
       <div class="contents">
-        <a href="#">
-          <section class="cp-card content">
-            <div class="thumb" style="background-image: url('#');"></div>
-            <div class="body">
-              <span class="cp-chip green">음식점1</span>
-              <h2 class="title">제목1</h2>
-              <date class="date">2021년 2월 25일</date>
-              <div class="metadata">
-                <div class="review-rating">
-                  <span class="cp-stars">★★★★★</span>
-                </div>
-                <div class="review-author">
-                  <span>유저1</span>
-                </div>
-              </div>
-            </div>
-          </section>
-        </a>
-        <a href="#">
-          <section class="cp-card content">
-            <div class="thumb" style="background-image: url('#');"></div>
-            <div class="body">
-              <span class="cp-chip green">음식점2</span>
-              <h2 class="title">제목2</h2>
-              <date class="date">2021년 2월 25일</date>
-              <div class="metadata">
-                <div class="review-rating">
-                  <span class="cp-stars">★★★★</span>
-                </div>
-                <div class="review-author">
-                  <span>유저2</span>
+        {% for review in reviews %}
+          <a href="#">
+            <section class="cp-card content">
+              <div class="thumb" style="background-image: url('{{review.image1.url}}');"></div>
+              <div class="body">
+                <span class="cp-chip green">{{review.restaurant_name}}</span>
+                <h2 class="title">{{review.title}}</h2>
+                <date class="date">{{review.dt_created|date:"Y년 n월 j일"}}</date>
+                <div class="metadata">
+                  <div class="review-rating">
+                    <span class="cp-stars">
+                      {% for i in ""|ljust:review.rating %}
+                        ★
+                      {% endfor %}
+                    </span>
+                  </div>
+                  <div class="review-author">
+                    <span>{{review.author.nickname}}</span>
+                  </div>
                 </div>
               </div>
-            </div>
-          </section>
-        </a>
-        {% comment %}
-        <p class="empty">아직 리뷰가 없어요 :(</p>
-        {% endcomment %}
+            </section>
+          </a>
+        {% empty %}
+          <p class="empty">아직 리뷰가 없어요 :(</p>
+        {% endfor %}
       </div>
 
       {% if is_paginated %}
