--- a/kckc0608/Round2/django-coplate/coplate_project/coplate/templates/coplate/index.html
+++ b/kckc0608/Round2/django-coplate/coplate_project/coplate/templates/coplate/index.html
@@ -16,7 +16,7 @@
     </div>
       <div class="contents">
         {% for review in reviews %}
-          <a href="#">
+          <a href="{% url "review-detail" review.id %}">
             <section class="cp-card content">
               <div class="thumb" style="background-image: url('{{review.image1.url}}');"></div>
               <div class="body">
