--- a/kckc0608/Round2/django-coplate/coplate_project/coplate/templates/coplate/review_form.html
+++ b/kckc0608/Round2/django-coplate/coplate_project/coplate/templates/coplate/review_form.html
@@ -21,7 +21,10 @@
       {% endfor %}
     </div>
     <div class="restaurant-link">
-      <input type="url" name="restaurant_link" maxlength="200" placeholder="네이버 또는 카카오 플레이스 주소" class="cp-input" required id="id_restaurant_link">
+      {{ form.restaurant_link|add_class:"cp-input"|attr:"placeholder:네이버 또는 카카오 플레이스 주소"}}
+      {% for error in form.restaurant_link.errors %}
+        <div class="error-message">{{error}}</div>
+      {% endfor %}
     </div>
     <div class="rating">
       <div class="cp-stars">
