--- a/kckc0608/Round2/django-coplate2/coplate_project/coplate/templates/coplate/profile.html
+++ b/kckc0608/Round2/django-coplate2/coplate_project/coplate/templates/coplate/profile.html
@@ -27,6 +27,23 @@
           </div>
         {% endif %}
       </div>
+      <div class="follow-section">
+        <a href="#">
+          팔로워 {{ profile_user.followers.count }}
+        </a>
+        <span class="vert-divider">|</span>
+        <a href="#">
+          팔로잉 {{ profile_user.following.count }}
+        </a>
+      </div>
+      {% if user.is_authenticated and user != profile_user %}
+        <form class="follow-button" action="#" method="post">
+          {% csrf_token %}
+          <button class="cp-button small" type="submit">
+            팔로우
+          </button>
+        </form>
+      {% endif %}
     </div>
   </div>
 
