[Round2] D. podomarket_project ~4-34

--- a/jaychung0101/Round2/D. Django 모델 파헤치기/django-coplate2/podomarket_project/podomarket/templates/podomarket/profile.html
+++ b/jaychung0101/Round2/D. Django 모델 파헤치기/django-coplate2/podomarket_project/podomarket/templates/podomarket/profile.html
@@ -11,6 +11,20 @@
   <div class="info">
     <div class="header-row">
       <span class="nickname">{{ profile_user.nickname }}</span>
+      {% if user.is_authenticated and user != profile_user %}
+        <form action="{% url "process-follow" profile_user.id %}" method="post">
+          {% csrf_token %}
+          {% if is_following %}
+            <button class="follow-button secondary" type="submit">
+              언팔로우
+            </button>
+          {% else %}
+            <button class="follow-button" type="submit">
+              팔로우
+            </button>
+          {% endif %}
+        </form>
+      {% endif %}
     </div>
     <ul class="podo-links">
       <li>{{ profile_user.kakao_id }}</li>
