--- a/Jeon-jisu/Round2/django-coplate/coplate_project/coplate/templates/account/login.html
+++ b/Jeon-jisu/Round2/django-coplate/coplate_project/coplate/templates/account/login.html
@@ -17,16 +17,16 @@
     <form method="post">
       {% csrf_token %}
       {% for error in form.non_field_errors %}
-        <div class="form-error error-message">{{error}}</div>
+        <div class="form-error error-message">이메일 또는 비밀번호가 올바르지 않습니다.</div>
       {% endfor %}
       <div>
-        {{form.login|add_class:"cp-input"|attr:"palceholder:이메일"|add_error_class:"error"}}
+        {{form.login|add_class:"cp-input"|attr:"placeholder:이메일"|add_error_class:"error"}}
         {% for error in form.login.errors %}
           <div class="form-error error-message">{{error}}</div>
         {% endfor %}
       </div>
       <div>
-        {{form.password|add_class:"cp-input"|attr:"palceholder:비밀번호"|add_error_class:"error"}}
+        {{form.password|add_class:"cp-input"|attr:"placeholder:비밀번호"|add_error_class:"error"}}
         {% for error in form.password.errors %}
           <div class="form-error error-message">{{error}}</div>
         {% endfor %}
