--- a/Jeon-jisu/Round2/django-coplate/coplate_project/coplate/templates/account/signup.html
+++ b/Jeon-jisu/Round2/django-coplate/coplate_project/coplate/templates/account/signup.html
@@ -9,7 +9,7 @@
 <div class="account-background">
   <main class="account">
     <div class="title">
-      <a href="{% url 'index'%}">
+      <a href="{% url 'index' %}">
         <img class="logo" src="{% static 'coplate/assets/coplate-logo.svg' %}" alt="Coplate Logo">
       </a>
     </div>
@@ -17,25 +17,25 @@
     <form method="post">
       {% csrf_token %}
       <div>
-        {{ form.email |add_class:"cp-input"|attr:"placeholder:이메일"|add_error_class:"error" }}
+        {{ form.email|add_class:"cp-input"|attr:"placeholder:이메일"|add_error_class:"error"}}
         {% for error in form.email.errors %}
           <div class="error-message">{{error}}</div>
         {% endfor %}
       </div>
-      <div>
-        {{ form.nickname|add_class:"cp-input"|attr:"placeholder:닉네임 (Copalte에서 사용되는 이름입니다)"|add_error_class:"error"}}
+      {% comment %} <div>
+        {{ form.nickname|add_class:"cp-input"|attr:"placeholder:닉네임 (Coplate에서 사용되는 이름입니다)"|add_error_class:"error"}}
         {% for error in form.nickname.errors %}
           <div class="error-message">{{error}}</div>
         {% endfor %}
-      </div>
+      </div> {% endcomment %}
       <div>
-        {{ form.password1|add_class:"cp-input"|attr:"placeholder:비밀번호"|add_error_class:"error" }}
+        {{ form.password1|add_class:"cp-input"|attr:"placeholder:비밀번호"|add_error_class:"error"}}
         {% for error in form.password1.errors %}
           <div class="error-message">{{error}}</div>
         {% endfor %}
       </div>
       <div>
-        {{ form.password2|add_class:"cp-input"|attr:"placeholder:비밀번호 확인"|add_error_class:"error" }}
+        {{ form.password2|add_class:"cp-input"|attr:"placeholder:비밀번호 확인"|add_error_class:"error"}}
         {% for error in form.password2.errors %}
           <div class="error-message">{{error}}</div>
         {% endfor %}
@@ -44,7 +44,7 @@
     </form>
 
     <div class="info">
-      이미 회원이신가요?<a class="link" href="{% url 'account_login'%}">로그인</a>
+      이미 회원이신가요?<a class="link" href="{% url 'account_login' %}">로그인</a>
     </div>
   </main>
 </div>
