--- a/Jeon-jisu/Round2/django-coplate/coplate_project/coplate/templates/coplate/email_confirmation_done.html
+++ b/Jeon-jisu/Round2/django-coplate/coplate_project/coplate/templates/coplate/email_confirmation_done.html
@@ -1,6 +1,6 @@
-이메일 인증이 완료되었습니다
+이메일 인증이 완료되었습니다. 
 {% if user.is_authenticated %}
-    <a href = "{% url 'index' %}" > 홈으로 이동 </a>
+    <a href="{% url 'index' %}">홈으로 이동</a>
 {% else %}
-    <a href = "{% url 'account_login' %}" > 로그인하기 </a>
+    <a href="{% url 'account_login' %}">로그인하기</a>
 {% endif %}
