[Round2] D. podomarket_project ~4-45

--- a/jaychung0101/Round2/D. Django 모델 파헤치기/django-coplate2/podomarket_project/podomarket/templates/podomarket/index.html
+++ b/jaychung0101/Round2/D. Django 모델 파헤치기/django-coplate2/podomarket_project/podomarket/templates/podomarket/index.html
@@ -11,6 +11,10 @@
       <span>글쓰기</span>
     </a>
   </div>
+  <form class="search-form" action="{% url "search" %}" method="get">
+    <input class="search-input" type="text" name="query" placeholder="검색어를 입력해주세요" required>
+    <button class="podo-button darkpurple" type="submit">검색</button>
+  </form>
   {% include "components/post_list.html" with posts=posts %}
   {% if is_paginated %}
     {% include "components/pagination.html" with page_obj=page_obj %}
